[Implementation] Initial draft. Large files not incluced

--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 
   <body class ="page-body">
     
-    <div class ="page-container">
+    <div class ="page-container js-page-container">
 
       
       <div class="welcome-message-container">
