--- a/projects.html
+++ b/projects.html
@@ -9,10 +9,10 @@
 
   <body class ="page-body">
 
-    <div class="page-container">
+    <div class="page-container js-page-container">
       <div class="welcome-message-container">
         <div class="welcome-message-text">
-          <p>My Proejcts!</p>
+          <p>My Projects!</p>
         </div>
         <img class="welcome-message-image" src="images/project.png">
       </div>
