[Implementation] updated welcome image

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <div class="welcome-message-text">
           <p>Welcome to My Website!</p>
         </div>
-        <img class="welcome-message-image" src="images/welcome-image.jpg">
+        <img class="welcome-message-image" src="images/welcome-image.png">
       </div>
 
       <div class="js-home-blocks">
