[Implementation] Fixed page navigation bug from integration to github pages

--- a/projects/coffeemaker-web-app.html
+++ b/projects/coffeemaker-web-app.html
@@ -13,7 +13,7 @@
         <div class="welcome-message-text">
           <p>CoffeeMaker Web Application!</p>
         </div>
-        <img class="welcome-message-image" src="/images/coffee-clipart.png">
+        <img class="welcome-message-image" src="../images/coffee-clipart.png">
       </div>
       
       <div class="js-coffee-blocks">
