--- a/projects/data-analysis-project.html
+++ b/projects/data-analysis-project.html
@@ -13,7 +13,7 @@
         <div class="welcome-message-text">
           <p>Stock Data Analysis Project!</p>
         </div>
-        <img class="welcome-message-image" src="/images/data-analysis.png">
+        <img class="welcome-message-image" src="../images/data-analysis.png">
       </div>
       
       <div class="js-data-blocks">
