--- a/projects/new-language-project.html
+++ b/projects/new-language-project.html
@@ -13,7 +13,7 @@
         <div class="welcome-message-text">
           <p>New Coding Language Interpreter!</p>
         </div>
-        <img class="welcome-message-image" src="/images/interpreter.png">
+        <img class="welcome-message-image" src="../images/interpreter.png">
       </div>
     
       <div class="js-interpreter-blocks">
