--- a/projects/web-config-project.html
+++ b/projects/web-config-project.html
@@ -13,7 +13,7 @@
         <div class="welcome-message-text">
           <p>Hitatchi Energy Web Configurator!</p>
         </div>
-        <img class="welcome-message-image" src="/images/hitachi-logo.png">
+        <img class="welcome-message-image" src="../images/hitachi-logo.png">
       </div> 
 
       <div class="js-hitachi-blocks">
